--- a/templates/index.html
+++ b/templates/index.html
@@ -73,6 +73,9 @@
                 <input type="submit" value="Create index offre emploi" class="btn btn-primary">
             </form>
         {% endif %}
+        <form action="/create_postuler" method="post" class="mt-4">
+            <input type="submit" value="Create index postuler" class="btn btn-primary">
+        </form>
         <a href="/add-offre" class="btn btn-secondary">Add Offre d'Emploi</a>
 <a href="/delete-index" class="btn btn-danger">Delete Index</a>
 
